feat: adds room database for persistency, unit test for one of the DAOs, the other two will be added on a separate PR